--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,10 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.idea/misc.xml
+.idea/modules.xml
+.idea/React-QuizComponent.iml
+.idea/vcs.xml
+.idea/workspace.xml___jb_old___
+.idea/workspace.xml___jb_tmp___
+.idea/workspace.xml
